# RustEBin

./: .envrc  .gitignore  .pre-commit-config.yaml  Cargo.lock.license  Cargo.toml  README.md  README.md.license  cog.toml  flake.lock.license  flake.nix
.github/: dependabot.yml
src/: db_models.rs  main.rs
