# SPDX-FileCopyrightText: Dom Rodriguez <shymega+rustebin@shymega.org.uk>
# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "rustebin"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "0.56.1"
aws-sdk-rds = "1.21.1"
aws-sdk-s3 = "1.17.0"
aws_lambda_events = { version = "0.15.0", default-features = false, features = ["apigw", "s3"] }
chrono = { version = "0.4.35", features = ["serde"] }
env_logger = "0.11.3"
lambda_http = { version = "0.10.0", features = ["apigw_http"] }
lambda_runtime = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.21"
openssl = { version = "0.10.64", features = ["vendored"] }
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["postgres", "uuid", "runtime-tokio-rustls"] }
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
uuid = { version = "1.7.0", features = ["v4"] }
