# SPDX-FileCopyrightText: Dom Rodriguez <shymega+rustebin@shymega.org.uk>
# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "rustebin"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.1.9"
aws-sdk-rds = "1.25.0"
aws-sdk-s3 = "1.21.0"
aws_lambda_events = { version = "0.15.1", default-features = false, features = ["apigw", "s3"] }
chrono = { version = "0.4.38", features = ["serde"] }
env_logger = "0.11.3"
lambda_http = { version = "0.11.1", features = ["apigw_http"] }
lambda_runtime = "0.11.2"
lazy_static = "1.4.0"
log = "0.4.21"
openssl = { version = "0.10.64", features = ["vendored"] }
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["postgres", "uuid", "runtime-tokio-rustls"] }
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4"] }
